--- a/index.html
+++ b/index.html
@@ -202,9 +202,118 @@
             width: 100%;
         }
 
+        /* Dropdown Menus */
+        .nav-dropdown {
+            position: relative;
+        }
+
+        .nav-dropdown-trigger {
+            display: flex;
+            align-items: center;
+            gap: 6px;
+            background: none;
+            border: none;
+            color: var(--text-secondary);
+            font-family: inherit;
+            font-weight: 500;
+            font-size: 1rem;
+            letter-spacing: 0.5px;
+            cursor: pointer;
+            padding: 0;
+            transition: all 0.3s ease;
+        }
+
+        .nav-dropdown-trigger:hover,
+        .nav-dropdown-trigger:focus {
+            color: var(--accent-cyan);
+        }
+
+        .nav-dropdown-trigger:focus-visible {
+            outline: 2px solid var(--accent-cyan);
+            outline-offset: 4px;
+            border-radius: 4px;
+        }
+
+        .nav-dropdown-trigger svg {
+            transition: transform 0.3s ease;
+        }
+
+        .nav-dropdown:hover .nav-dropdown-trigger svg {
+            transform: rotate(180deg);
+        }
+
+        .nav-dropdown-menu {
+            position: absolute;
+            top: calc(100% + 12px);
+            left: 50%;
+            transform: translateX(-50%) translateY(10px);
+            min-width: 200px;
+            background: rgba(18, 18, 26, 0.98);
+            backdrop-filter: blur(20px);
+            border: 1px solid var(--border-glow);
+            border-radius: 12px;
+            padding: 8px;
+            opacity: 0;
+            visibility: hidden;
+            transition: all 0.3s ease;
+            box-shadow: 0 20px 50px rgba(0, 0, 0, 0.5), 0 0 30px rgba(0, 245, 212, 0.1);
+        }
+
+        .nav-dropdown-menu::before {
+            content: '';
+            position: absolute;
+            top: -8px;
+            left: 50%;
+            transform: translateX(-50%);
+            border: 8px solid transparent;
+            border-bottom-color: var(--border-glow);
+        }
+
+        .nav-dropdown:hover .nav-dropdown-menu,
+        .nav-dropdown.open .nav-dropdown-menu {
+            opacity: 1;
+            visibility: visible;
+            transform: translateX(-50%) translateY(0);
+        }
+
+        .nav-dropdown.open .nav-dropdown-trigger svg {
+            transform: rotate(180deg);
+        }
+
+        .nav-dropdown-menu a {
+            display: flex;
+            align-items: center;
+            gap: 12px;
+            padding: 12px 16px;
+            color: var(--text-secondary);
+            text-decoration: none;
+            border-radius: 8px;
+            transition: all 0.2s ease;
+            font-weight: 500;
+        }
+
+        .nav-dropdown-menu a::after {
+            display: none;
+        }
+
+        .nav-dropdown-menu a:hover {
+            background: rgba(0, 245, 212, 0.1);
+            color: var(--accent-cyan);
+        }
+
+        .nav-dropdown-menu a svg {
+            color: var(--accent-cyan);
+            opacity: 0.7;
+        }
+
+        .nav-dropdown-menu a:hover svg {
+            opacity: 1;
+        }
+
         .nav-cta {
             display: flex;
-            gap: 1rem;
+            align-items: center;
+            gap: 0.75rem;
         }
 
         .btn {
@@ -243,6 +352,47 @@
         .btn-secondary:hover {
             background: rgba(0, 245, 212, 0.1);
             border-color: var(--accent-cyan);
+        }
+
+        /* Icon-only button */
+        .btn.btn-icon {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            width: 42px;
+            height: 42px;
+            padding: 0;
+            border-radius: 10px;
+            background: rgba(255, 255, 255, 0.06);
+            border: 1px solid var(--border-subtle);
+            color: var(--text-primary);
+        }
+
+        .btn.btn-icon svg {
+            width: 20px;
+            height: 20px;
+            fill: currentColor;
+        }
+
+        .btn.btn-icon:hover {
+            border-color: var(--border-glow);
+            color: var(--accent-cyan);
+            background: rgba(0, 245, 212, 0.1);
+            transform: translateY(-2px);
+            box-shadow: 0 0 20px rgba(0, 245, 212, 0.2);
+        }
+
+        /* Icon + text button */
+        .btn.btn-icon-text {
+            display: inline-flex;
+            align-items: center;
+            gap: 8px;
+            padding: 10px 20px;
+            border-radius: 10px;
+        }
+
+        .btn.btn-icon-text .btn-text {
+            font-weight: 600;
         }
 
         /* Hero Section */
@@ -1788,6 +1938,39 @@
         }
 
         /* Responsive */
+        @media (max-width: 1100px) {
+            .nav-links {
+                gap: 1.25rem;
+            }
+
+            .nav-dropdown-trigger {
+                font-size: 0.95rem;
+            }
+
+            .btn.btn-icon-text .btn-text {
+                display: none;
+            }
+
+            .btn.btn-icon-text {
+                width: 42px;
+                height: 42px;
+                padding: 0;
+                justify-content: center;
+            }
+        }
+
+        @media (max-width: 900px) {
+            /* Switch to mobile menu at tablet size */
+            .nav-links,
+            .nav-cta {
+                display: none;
+            }
+
+            .mobile-menu-btn {
+                display: flex;
+            }
+        }
+
         @media (max-width: 1024px) {
             .hero-content {
                 grid-template-columns: 1fr;
@@ -1815,13 +1998,17 @@
         }
 
         @media (max-width: 768px) {
-            .nav-links,
-            .nav-cta {
-                display: none;
+            nav {
+                padding: 0.75rem 1rem;
             }
 
-            .mobile-menu-btn {
-                display: flex;
+            .nav-logo-icon {
+                width: 36px;
+                height: 36px;
+            }
+
+            .nav-logo-text {
+                font-size: 1rem;
             }
 
             .hero-stats {
@@ -2383,27 +2570,84 @@
                 <span class="nav-logo-text"><span>Torn</span> Target Tracker</span>
             </a>
             <ul class="nav-links">
-                <li><a href="#features">Features</a></li>
-                <li><a href="#screenshots">Screenshots</a></li>
-                <li><a href="#whats-new">What's New</a></li>
-                <li><a href="guide.html">Guide</a></li>
-                <li><a href="release-notes.html">Release Notes</a></li>
+                <li class="nav-dropdown">
+                    <button class="nav-dropdown-trigger">
+                        Explore
+                        <svg width="12" height="12" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                            <polyline points="6 9 12 15 18 9"/>
+                        </svg>
+                    </button>
+                    <div class="nav-dropdown-menu">
+                        <a href="#features">
+                            <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                                <polygon points="12 2 2 7 12 12 22 7 12 2"/>
+                                <polyline points="2 17 12 22 22 17"/>
+                                <polyline points="2 12 12 17 22 12"/>
+                            </svg>
+                            Features
+                        </a>
+                        <a href="#screenshots">
+                            <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                                <rect x="3" y="3" width="18" height="18" rx="2" ry="2"/>
+                                <circle cx="8.5" cy="8.5" r="1.5"/>
+                                <polyline points="21 15 16 10 5 21"/>
+                            </svg>
+                            Screenshots
+                        </a>
+                        <a href="#whats-new">
+                            <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                                <path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"/>
+                                <polyline points="14 2 14 8 20 8"/>
+                                <line x1="12" y1="18" x2="12" y2="12"/>
+                                <line x1="9" y1="15" x2="15" y2="15"/>
+                            </svg>
+                            What's New
+                        </a>
+                    </div>
+                </li>
+                <li class="nav-dropdown">
+                    <button class="nav-dropdown-trigger">
+                        Resources
+                        <svg width="12" height="12" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                            <polyline points="6 9 12 15 18 9"/>
+                        </svg>
+                    </button>
+                    <div class="nav-dropdown-menu">
+                        <a href="guide.html">
+                            <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                                <path d="M2 3h6a4 4 0 0 1 4 4v14a3 3 0 0 0-3-3H2z"/>
+                                <path d="M22 3h-6a4 4 0 0 0-4 4v14a3 3 0 0 1 3-3h7z"/>
+                            </svg>
+                            User Guide
+                        </a>
+                        <a href="release-notes.html">
+                            <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                                <line x1="8" y1="6" x2="21" y2="6"/>
+                                <line x1="8" y1="12" x2="21" y2="12"/>
+                                <line x1="8" y1="18" x2="21" y2="18"/>
+                                <line x1="3" y1="6" x2="3.01" y2="6"/>
+                                <line x1="3" y1="12" x2="3.01" y2="12"/>
+                                <line x1="3" y1="18" x2="3.01" y2="18"/>
+                            </svg>
+                            Release Notes
+                        </a>
+                    </div>
+                </li>
                 <li><a href="#download">Download</a></li>
             </ul>
             <div class="nav-cta">
-                <a href="https://github.com/skillerious/TornTargetTrackerV2" class="btn btn-secondary" target="_blank">
-                    <svg width="18" height="18" viewBox="0 0 24 24" fill="currentColor">
+                <a href="https://github.com/skillerious/TornTargetTrackerV2" class="btn btn-icon" target="_blank" aria-label="View on GitHub" title="View on GitHub">
+                    <svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor">
                         <path d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z"/>
                     </svg>
-                    GitHub
                 </a>
-                <a href="https://github.com/skillerious/TornTargetTrackerV2/releases/download/v2.7.9/TornTargetTrackerSetup-2.7.9.exe" class="btn btn-primary">
+                <a href="https://github.com/skillerious/TornTargetTrackerV2/releases/download/v2.7.9/TornTargetTrackerSetup-2.7.9.exe" class="btn btn-primary btn-icon-text" aria-label="Download">
                     <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                         <path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"/>
                         <polyline points="7 10 12 15 17 10"/>
                         <line x1="12" y1="15" x2="12" y2="3"/>
                     </svg>
-                    Download
+                    <span class="btn-text">Download</span>
                 </a>
             </div>
             <button class="mobile-menu-btn" id="mobile-menu-btn" aria-label="Open menu" aria-expanded="false">
