--- a/index.html
+++ b/index.html
@@ -2543,6 +2543,137 @@
         .particle {
             will-change: transform, opacity;
         }
+
+        /* ===== BACK TO TOP BUTTON ===== */
+        .back-to-top {
+            position: fixed;
+            bottom: 2rem;
+            right: 2rem;
+            width: 48px;
+            height: 48px;
+            border: none;
+            background: rgba(10, 14, 20, 0.9);
+            border-radius: 50%;
+            cursor: pointer;
+            z-index: 1000;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            opacity: 0;
+            visibility: hidden;
+            transform: translateY(20px) scale(0.8);
+            transition: all 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+            box-shadow: 0 4px 20px rgba(0, 0, 0, 0.4),
+                        0 0 0 1px rgba(0, 245, 212, 0.1);
+            backdrop-filter: blur(10px);
+            -webkit-backdrop-filter: blur(10px);
+        }
+
+        .back-to-top.visible {
+            opacity: 1;
+            visibility: visible;
+            transform: translateY(0) scale(1);
+        }
+
+        .back-to-top:hover {
+            background: rgba(0, 245, 212, 0.15);
+            box-shadow: 0 8px 32px rgba(0, 245, 212, 0.3),
+                        0 0 0 1px rgba(0, 245, 212, 0.4),
+                        inset 0 0 20px rgba(0, 245, 212, 0.1);
+            transform: translateY(-4px) scale(1.05);
+        }
+
+        .back-to-top:active {
+            transform: translateY(-2px) scale(1);
+        }
+
+        .back-to-top .progress-ring {
+            position: absolute;
+            width: 48px;
+            height: 48px;
+            transform: rotate(-90deg);
+        }
+
+        .back-to-top .progress-ring-bg {
+            fill: none;
+            stroke: rgba(255, 255, 255, 0.08);
+            stroke-width: 2;
+        }
+
+        .back-to-top .progress-ring-circle {
+            fill: none;
+            stroke: var(--accent-cyan);
+            stroke-width: 2;
+            stroke-linecap: round;
+            stroke-dasharray: 125.6;
+            stroke-dashoffset: 125.6;
+            transition: stroke-dashoffset 0.1s ease-out;
+            filter: drop-shadow(0 0 6px rgba(0, 245, 212, 0.6));
+        }
+
+        .back-to-top .arrow-icon {
+            width: 20px;
+            height: 20px;
+            color: var(--accent-cyan);
+            transition: transform 0.3s ease, color 0.3s ease;
+            filter: drop-shadow(0 0 4px rgba(0, 245, 212, 0.4));
+        }
+
+        .back-to-top:hover .arrow-icon {
+            transform: translateY(-2px);
+            color: #fff;
+            filter: drop-shadow(0 0 8px rgba(0, 245, 212, 0.8));
+        }
+
+        /* Pulse animation on first appearance */
+        @keyframes btt-pulse {
+            0%, 100% { box-shadow: 0 4px 20px rgba(0, 0, 0, 0.4), 0 0 0 1px rgba(0, 245, 212, 0.1); }
+            50% { box-shadow: 0 4px 20px rgba(0, 0, 0, 0.4), 0 0 0 4px rgba(0, 245, 212, 0.2), 0 0 20px rgba(0, 245, 212, 0.3); }
+        }
+
+        .back-to-top.pulse {
+            animation: btt-pulse 2s ease-in-out 1;
+        }
+
+        /* Mobile adjustments */
+        @media (max-width: 768px) {
+            .back-to-top {
+                bottom: 1.5rem;
+                right: 1.5rem;
+                width: 44px;
+                height: 44px;
+            }
+
+            .back-to-top .progress-ring {
+                width: 44px;
+                height: 44px;
+            }
+
+            .back-to-top .arrow-icon {
+                width: 18px;
+                height: 18px;
+            }
+        }
+
+        /* Reduced motion preference */
+        @media (prefers-reduced-motion: reduce) {
+            .back-to-top {
+                transition: opacity 0.2s ease, visibility 0.2s ease;
+                transform: none !important;
+            }
+
+            .back-to-top.visible {
+                transform: none;
+            }
+
+            .back-to-top:hover {
+                transform: none;
+            }
+
+            .back-to-top.pulse {
+                animation: none;
+            }
+        }
     </style>
 </head>
 <body>
@@ -3353,7 +3484,7 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p class="footer-copyright">(c) 2025 Torn Target Tracker. Not affiliated with Torn.com. Use responsibly.</p>
+                <p class="footer-copyright">© 2025 Robin Doak. Torn Target Tracker is not affiliated with Torn.com. Use responsibly.</p>
                 <div class="footer-social">
                     <a href="https://github.com/skillerious/TornTargetTrackerV2" target="_blank" aria-label="GitHub">
                         <svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor">
@@ -3364,6 +3495,17 @@
             </div>
         </div>
     </footer>
+
+    <!-- Back to Top Button with Scroll Progress -->
+    <button class="back-to-top" aria-label="Scroll to top" title="Back to top">
+        <svg class="progress-ring" viewBox="0 0 48 48">
+            <circle class="progress-ring-bg" cx="24" cy="24" r="20" />
+            <circle class="progress-ring-circle" cx="24" cy="24" r="20" />
+        </svg>
+        <svg class="arrow-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round">
+            <path d="M18 15l-6-6-6 6"/>
+        </svg>
+    </button>
 
     <script src="app.js"></script>
 </body>
