--- a/release-notes.html
+++ b/release-notes.html
@@ -13,24 +13,224 @@
 <body class="page-shell release-page">
     <div class="bg-grid"></div>
     <div class="bg-gradient"></div>
+    <div class="particles" id="particles"></div>
 
-    <header class="page-nav">
-        <div class="nav-inner">
-            <a class="brand" href="index.html">
-                <span class="brand-dot"></span>
-                <span>Torn Target Tracker</span>
+    <!-- Navigation -->
+    <nav id="navbar">
+        <div class="nav-container">
+            <a href="index.html" class="nav-logo">
+                <div class="nav-logo-icon">
+                    <svg viewBox="0 0 100 100" class="logo-svg">
+                        <circle cx="50" cy="50" r="45" fill="none" stroke="#00ff88" stroke-width="3" opacity="0.3"/>
+                        <circle cx="50" cy="50" r="35" fill="none" stroke="#00ff88" stroke-width="2" opacity="0.5"/>
+                        <circle cx="50" cy="50" r="25" fill="none" stroke="#00ff88" stroke-width="2"/>
+                        <line x1="50" y1="15" x2="50" y2="35" stroke="#00ff88" stroke-width="3"/>
+                        <line x1="50" y1="65" x2="50" y2="85" stroke="#00ff88" stroke-width="3"/>
+                        <line x1="15" y1="50" x2="35" y2="50" stroke="#00ff88" stroke-width="3"/>
+                        <line x1="65" y1="50" x2="85" y2="50" stroke="#00ff88" stroke-width="3"/>
+                        <circle cx="50" cy="50" r="8" fill="#00ff88"/>
+                    </svg>
+                </div>
+                <span class="nav-logo-text"><span>Torn</span> Target Tracker</span>
             </a>
             <ul class="nav-links">
-                <li><a href="index.html#whats-new">Highlights</a></li>
-                <li><a href="guide.html">Guide</a></li>
-                <li><a href="https://github.com/skillerious/TornTargetTrackerV2/releases" target="_blank" rel="noopener">All releases</a></li>
+                <li class="nav-dropdown">
+                    <button class="nav-dropdown-trigger">
+                        Explore
+                        <svg width="12" height="12" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                            <polyline points="6 9 12 15 18 9"/>
+                        </svg>
+                    </button>
+                    <div class="nav-dropdown-menu">
+                        <a href="index.html#features">
+                            <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                                <polygon points="12 2 2 7 12 12 22 7 12 2"/>
+                                <polyline points="2 17 12 22 22 17"/>
+                                <polyline points="2 12 12 17 22 12"/>
+                            </svg>
+                            Features
+                        </a>
+                        <a href="index.html#screenshots">
+                            <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                                <rect x="3" y="3" width="18" height="18" rx="2" ry="2"/>
+                                <circle cx="8.5" cy="8.5" r="1.5"/>
+                                <polyline points="21 15 16 10 5 21"/>
+                            </svg>
+                            Screenshots
+                        </a>
+                        <a href="index.html#whats-new">
+                            <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                                <path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"/>
+                                <polyline points="14 2 14 8 20 8"/>
+                                <line x1="12" y1="18" x2="12" y2="12"/>
+                                <line x1="9" y1="15" x2="15" y2="15"/>
+                            </svg>
+                            What's New
+                        </a>
+                    </div>
+                </li>
+                <li class="nav-dropdown">
+                    <button class="nav-dropdown-trigger">
+                        Resources
+                        <svg width="12" height="12" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                            <polyline points="6 9 12 15 18 9"/>
+                        </svg>
+                    </button>
+                    <div class="nav-dropdown-menu">
+                        <a href="guide.html">
+                            <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                                <path d="M2 3h6a4 4 0 0 1 4 4v14a3 3 0 0 0-3-3H2z"/>
+                                <path d="M22 3h-6a4 4 0 0 0-4 4v14a3 3 0 0 1 3-3h7z"/>
+                            </svg>
+                            User Guide
+                        </a>
+                        <a href="release-notes.html" class="active">
+                            <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                                <line x1="8" y1="6" x2="21" y2="6"/>
+                                <line x1="8" y1="12" x2="21" y2="12"/>
+                                <line x1="8" y1="18" x2="21" y2="18"/>
+                                <line x1="3" y1="6" x2="3.01" y2="6"/>
+                                <line x1="3" y1="12" x2="3.01" y2="12"/>
+                                <line x1="3" y1="18" x2="3.01" y2="18"/>
+                            </svg>
+                            Release Notes
+                        </a>
+                    </div>
+                </li>
+                <li><a href="index.html#download">Download</a></li>
             </ul>
-            <div class="nav-actions">
-                <a class="btn btn-ghost" href="index.html#download">Back to download</a>
-                <a class="btn btn-primary" href="https://github.com/skillerious/TornTargetTrackerV2/releases/download/v2.7.9/TornTargetTrackerSetup-2.7.9.exe">Download v2.7.9</a>
+            <div class="nav-cta">
+                <a href="https://github.com/skillerious/TornTargetTrackerV2" class="btn btn-icon" target="_blank" aria-label="View on GitHub" title="View on GitHub">
+                    <svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor">
+                        <path d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z"/>
+                    </svg>
+                </a>
+                <a href="https://github.com/skillerious/TornTargetTrackerV2/releases/download/v2.7.9/TornTargetTrackerSetup-2.7.9.exe" class="btn btn-primary btn-icon-text" aria-label="Download">
+                    <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                        <path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"/>
+                        <polyline points="7 10 12 15 17 10"/>
+                        <line x1="12" y1="15" x2="12" y2="3"/>
+                    </svg>
+                    <span class="btn-text">Download</span>
+                </a>
+            </div>
+            <button class="mobile-menu-btn" id="mobile-menu-btn" aria-label="Open menu" aria-expanded="false">
+                <span></span>
+                <span></span>
+                <span></span>
+            </button>
+        </div>
+    </nav>
+
+    <!-- Mobile Menu Overlay -->
+    <div class="mobile-menu-overlay" id="mobile-menu-overlay"></div>
+
+    <!-- Mobile Menu Panel -->
+    <div class="mobile-menu" id="mobile-menu">
+        <div class="mobile-menu-header">
+            <div class="mobile-menu-logo">
+                <svg viewBox="0 0 100 100" class="logo-svg">
+                    <circle cx="50" cy="50" r="45" fill="none" stroke="#00ff88" stroke-width="3" opacity="0.3"/>
+                    <circle cx="50" cy="50" r="35" fill="none" stroke="#00ff88" stroke-width="2" opacity="0.5"/>
+                    <circle cx="50" cy="50" r="25" fill="none" stroke="#00ff88" stroke-width="2"/>
+                    <circle cx="50" cy="50" r="8" fill="#00ff88"/>
+                </svg>
+                <span class="mobile-menu-logo-text"><span>Torn</span> Tracker</span>
+            </div>
+            <button class="mobile-menu-close" id="mobile-menu-close" aria-label="Close menu">
+                <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                    <line x1="18" y1="6" x2="6" y2="18"/>
+                    <line x1="6" y1="6" x2="18" y2="18"/>
+                </svg>
+            </button>
+        </div>
+        <nav class="mobile-menu-nav">
+            <ul class="mobile-nav-list">
+                <li class="mobile-nav-item">
+                    <a href="index.html#features" class="mobile-nav-link">
+                        <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                            <polygon points="12 2 2 7 12 12 22 7 12 2"/>
+                            <polyline points="2 17 12 22 22 17"/>
+                            <polyline points="2 12 12 17 22 12"/>
+                        </svg>
+                        Features
+                    </a>
+                </li>
+                <li class="mobile-nav-item">
+                    <a href="index.html#screenshots" class="mobile-nav-link">
+                        <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                            <rect x="3" y="3" width="18" height="18" rx="2" ry="2"/>
+                            <circle cx="8.5" cy="8.5" r="1.5"/>
+                            <polyline points="21 15 16 10 5 21"/>
+                        </svg>
+                        Screenshots
+                    </a>
+                </li>
+                <li class="mobile-nav-item">
+                    <a href="index.html#whats-new" class="mobile-nav-link">
+                        <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                            <path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"/>
+                            <polyline points="14 2 14 8 20 8"/>
+                            <line x1="12" y1="18" x2="12" y2="12"/>
+                            <line x1="9" y1="15" x2="15" y2="15"/>
+                        </svg>
+                        What's New
+                    </a>
+                </li>
+                <div class="mobile-nav-divider"></div>
+                <li class="mobile-nav-item">
+                    <a href="guide.html" class="mobile-nav-link">
+                        <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                            <path d="M2 3h6a4 4 0 0 1 4 4v14a3 3 0 0 0-3-3H2z"/>
+                            <path d="M22 3h-6a4 4 0 0 0-4 4v14a3 3 0 0 1 3-3h7z"/>
+                        </svg>
+                        User Guide
+                    </a>
+                </li>
+                <li class="mobile-nav-item">
+                    <a href="release-notes.html" class="mobile-nav-link active">
+                        <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                            <line x1="8" y1="6" x2="21" y2="6"/>
+                            <line x1="8" y1="12" x2="21" y2="12"/>
+                            <line x1="8" y1="18" x2="21" y2="18"/>
+                            <line x1="3" y1="6" x2="3.01" y2="6"/>
+                            <line x1="3" y1="12" x2="3.01" y2="12"/>
+                            <line x1="3" y1="18" x2="3.01" y2="18"/>
+                        </svg>
+                        Release Notes
+                    </a>
+                </li>
+                <li class="mobile-nav-item">
+                    <a href="https://github.com/skillerious/TornTargetTrackerV2/issues" class="mobile-nav-link" target="_blank">
+                        <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                            <circle cx="12" cy="12" r="10"/>
+                            <line x1="12" y1="8" x2="12" y2="12"/>
+                            <line x1="12" y1="16" x2="12.01" y2="16"/>
+                        </svg>
+                        Report Issues
+                    </a>
+                </li>
+            </ul>
+        </nav>
+        <div class="mobile-menu-footer">
+            <div class="mobile-menu-cta">
+                <a href="https://github.com/skillerious/TornTargetTrackerV2/releases/download/v2.7.9/TornTargetTrackerSetup-2.7.9.exe" class="mobile-cta-btn primary">
+                    <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                        <path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"/>
+                        <polyline points="7 10 12 15 17 10"/>
+                        <line x1="12" y1="15" x2="12" y2="3"/>
+                    </svg>
+                    Download v2.7.9
+                </a>
+                <a href="https://github.com/skillerious/TornTargetTrackerV2" class="mobile-cta-btn secondary" target="_blank">
+                    <svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor">
+                        <path d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z"/>
+                    </svg>
+                    View on GitHub
+                </a>
             </div>
         </div>
-    </header>
+    </div>
 
     <main>
         <section class="page-hero">
@@ -128,5 +328,18 @@
             </div>
         </div>
     </footer>
+
+    <!-- Back to Top Button with Scroll Progress -->
+    <button class="back-to-top" aria-label="Scroll to top" title="Back to top">
+        <svg class="progress-ring" viewBox="0 0 48 48">
+            <circle class="progress-ring-bg" cx="24" cy="24" r="20" />
+            <circle class="progress-ring-circle" cx="24" cy="24" r="20" />
+        </svg>
+        <svg class="arrow-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round">
+            <path d="M18 15l-6-6-6 6"/>
+        </svg>
+    </button>
+
+    <script src="app.js"></script>
 </body>
 </html>
