--- a/release-notes.html
+++ b/release-notes.html
@@ -115,7 +115,7 @@
                         </a>
                     </div>
                 </li>
-                <li><a href="index.html#download">Download</a></li>
+                <li><a href="download.html">Download</a></li>
             </ul>
             <div class="nav-cta">
                 <a href="https://github.com/skillerious/TornTargetTrackerV2" class="btn btn-icon" target="_blank" rel="noopener noreferrer" aria-label="View on GitHub" title="View on GitHub">
@@ -486,7 +486,8 @@
                             <li><a href="index.html#whats-new">Changelog</a></li>
                             <li><a href="guide.html">Operator Guide</a></li>
                             <li><a href="release-notes.html">Release Notes</a></li>
-                            <li><a href="index.html#download">Download</a></li>
+                            <li><a href="download.html">Download</a></li>
+                            <li><a href="releases.html">All Releases</a></li>
                         </ul>
                     </div>
                     <div class="footer-column">
