--- a/index.html
+++ b/index.html
@@ -2863,7 +2863,7 @@
                         <path d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z"/>
                     </svg>
                 </a>
-                <a href="https://github.com/skillerious/TornTargetTrackerV2/releases/download/v2.7.9/TornTargetTrackerSetup-2.7.9.exe" class="btn btn-primary btn-icon-text" aria-label="Download">
+                <a href="download.html" class="btn btn-primary btn-icon-text" aria-label="Download">
                     <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                         <path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"/>
                         <polyline points="7 10 12 15 17 10"/>
@@ -2992,7 +2992,7 @@
         </nav>
         <div class="mobile-menu-footer">
             <div class="mobile-menu-cta">
-                <a href="https://github.com/skillerious/TornTargetTrackerV2/releases/download/v2.7.9/TornTargetTrackerSetup-2.7.9.exe" class="mobile-cta-btn primary">
+                <a href="download.html" class="mobile-cta-btn primary">
                     <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                         <path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"/>
                         <polyline points="7 10 12 15 17 10"/>
@@ -3000,7 +3000,7 @@
                     </svg>
                     Download v2.7.9
                 </a>
-                <a href="https://github.com/skillerious/TornTargetTrackerV2/releases/tag/v2.7.9" class="mobile-cta-btn secondary" target="_blank" rel="noopener noreferrer">
+                <a href="download.html#past-releases" class="mobile-cta-btn secondary">
                     View All Releases
                 </a>
             </div>
@@ -3045,7 +3045,7 @@
                     </div>
                 </div>
                 <div class="hero-cta">
-                    <a href="https://github.com/skillerious/TornTargetTrackerV2/releases/download/v2.7.9/TornTargetTrackerSetup-2.7.9.exe" class="btn btn-primary">
+                    <a href="download.html" class="btn btn-primary">
                         <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                             <path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"/>
                             <polyline points="7 10 12 15 17 10"/>
@@ -3492,7 +3492,7 @@
                     <h2 class="download-title">Ready to Deploy?</h2>
                     <p class="download-subtitle">Download Torn Target Tracker and take control of your chain operations with precision and style.</p>
                     <div class="download-buttons">
-                        <a href="https://github.com/skillerious/TornTargetTrackerV2/releases/download/v2.7.9/TornTargetTrackerSetup-2.7.9.exe" class="download-btn download-btn-primary">
+                        <a href="download.html" class="download-btn download-btn-primary">
                             <svg width="22" height="22" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                                 <path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"/>
                                 <polyline points="7 10 12 15 17 10"/>
@@ -3500,9 +3500,14 @@
                             </svg>
                             Download for Windows
                         </a>
-                        <a href="https://github.com/skillerious/TornTargetTrackerV2/releases/tag/v2.7.9" class="download-btn download-btn-secondary" target="_blank" rel="noopener noreferrer">
-                            <svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor">
-                                <path d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z"/>
+                        <a href="download.html#past-releases" class="download-btn download-btn-secondary">
+                            <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                                <line x1="8" y1="6" x2="21" y2="6"/>
+                                <line x1="8" y1="12" x2="21" y2="12"/>
+                                <line x1="8" y1="18" x2="21" y2="18"/>
+                                <line x1="3" y1="6" x2="3.01" y2="6"/>
+                                <line x1="3" y1="12" x2="3.01" y2="12"/>
+                                <line x1="3" y1="18" x2="3.01" y2="18"/>
                             </svg>
                             View All Releases
                         </a>
@@ -3567,7 +3572,8 @@
                             <li><a href="#whats-new">Changelog</a></li>
                             <li><a href="guide.html">Operator Guide</a></li>
                             <li><a href="release-notes.html">Release Notes</a></li>
-                            <li><a href="#download">Download</a></li>
+                            <li><a href="download.html">Download</a></li>
+                            <li><a href="releases.html">All Releases</a></li>
                         </ul>
                     </div>
                     <div class="footer-column">
